# adv-aeb-devops

./: .gitignore  README.md  requirements.txt
.github/workflows/: aeb-devops.yml
aeb_ws/src/aeb_system/: package.xml  setup.cfg  setup.py
aeb_ws/src/aeb_system/aeb_system/: __init__.py  camera_node.py  pedestrian_detector.py
aeb_ws/src/aeb_system/resource/: aeb_system
aeb_ws/src/aeb_system/test/: test_import.py
artifacts/event/: artifact_placeholder.jason
configs/: model_registry.json  safety_thresholds.json  scenario_registry.json
scripts/: create_release.py  generate_ci_result.py  run_sil.py  run_simulation.py  safety_gate.py  validate_json.py
src/: aeb_decision_node.py  vehicle_control_node.py
test/: test_aeb_chain.py
